--- a/app/src/main/res/layout/splashscreen.xml
+++ b/app/src/main/res/layout/splashscreen.xml
@@ -20,10 +20,14 @@
         android:id="@+id/textView2"
         android:layout_width="223dp"
         android:layout_height="105dp"
+        android:layout_marginStart="94dp"
+        android:layout_marginTop="74dp"
+        android:layout_marginEnd="94dp"
         android:text="K GUAPO TU"
-        android:textSize="150px"
         android:textColor="@color/white"
-        tools:layout_editor_absoluteX="94dp"
-        tools:layout_editor_absoluteY="449dp" />
+        android:textSize="150px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
