--- a/app/src/main/res/layout/splashscreen.xml
+++ b/app/src/main/res/layout/splashscreen.xml
@@ -18,14 +18,18 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="223dp"
-        android:layout_height="105dp"
+        android:layout_width="261dp"
+        android:layout_height="142dp"
         android:layout_marginStart="94dp"
-        android:layout_marginTop="74dp"
+        android:layout_marginTop="72dp"
         android:layout_marginEnd="94dp"
-        android:text="K GUAPO TU"
+        android:fontFamily="@font/exo"
+        android:text="Castillo Games"
+        android:textAlignment="center"
+        android:textAllCaps="true"
         android:textColor="@color/white"
         android:textSize="150px"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
