--- a/app/src/main/res/layout/menu_view.xml
+++ b/app/src/main/res/layout/menu_view.xml
@@ -37,4 +37,13 @@
         tools:layout_editor_absoluteX="69dp"
         tools:layout_editor_absoluteY="434dp" />
 
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true"
+        app:adSize="BANNER"
+        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        tools:ignore="MissingConstraints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
