--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="drkblue">#0d3ca1 </color>
+    <color name="light_green">#2bdc0f </color>
+
 </resources>
